Carried over changes from separate instance. --Nicholas Sutter

--- a/bg.html
+++ b/bg.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../css/socstyle.css">
-        <script type="text/javascript" src="../scripts/hmr_array.js"></script>
-        <script type="text/javascript" src="../scripts/weapontree.js"></script>
+        <link rel="stylesheet" type="text/css" href="./css/socstyle.css">
+        <script type="text/javascript" src="./scripts/bg_array.js"></script>
+        <script type="text/javascript" src="./scripts/weapontree.js"></script>
     </head>
     <body>
         <center>
@@ -14,7 +14,7 @@
             <div id="divContents"></div>       
         </center>
         <script>
-            $("#header").load("../header.html");
+            $("#header").load("./header.html");
             generateTree(arrWeapons);
         </script>
     </body>
